Fixing text-align issue in datepicker

--- a/public/css/admin/content/form.styl
+++ b/public/css/admin/content/form.styl
@@ -205,6 +205,7 @@ input.datepicker
 		font-size 10px
 		text-transform uppercase
 		border none
+		text-align center
 	td
 		border 1px solid $baseBorderColor
 		text-align center
